bk_ida/gccida/c0/output_constant_def_contents
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant_def_contents/src/varasm.c:3920:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)( unsigned __int8)exp->real_cst.real_cst.r[2], align, 0); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant_def_contents/src/varasm.c:3920:46: error: expected expression
mergeable_constant_section( ( machine_mode)( unsigned __int8)exp->real_cst.real_cst.r[2], align, 0); 
                                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_constant_def_contents/src/obj/varasm.o] Error 1
